--- a/src/main.html
+++ b/src/main.html
@@ -22,9 +22,9 @@
   314 templates
   12m+ queries
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="attribution-container">
+    Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev" target="_blank">Your Name Here</a>.
   </div>
 </body>
 </html>
