--- a/src/main.html
+++ b/src/main.html
@@ -24,7 +24,7 @@
 
   <div class="attribution-container">
     Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev" target="_blank">Your Name Here</a>.
+    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev" target="_blank">Farrukhjon Dev</a>.
   </div>
 </body>
 </html>
