--- a/src/main.html
+++ b/src/main.html
@@ -1,32 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./sass/main.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./sass/main.css" />
 
   <title>Frontend Mentor | Stats preview card component</title>
 
 </head>
+
 <body>
+  <div class="container">
+    <div class="stats">
+      <div class="stats__info">
+        <div class="stats__info-text">
+          <h1 class="info-text__title">
+            Get insights that help your business grow.
+          </h1>
+          <p class="info-text__description">
+            Discover the benefits of data analytics and make better decisions regarding
+            revenue, customer experience, and overall efficiency.
+          </p>
+        </div>
+        <div class="stats__info-statistics">
+          <div class="info-statistics__category">
+            <span class="category__title">10k+</span>
+            <span class="category__text">companies</span>
+          </div>
+          <div class="info-statistics__category">
+            <span class="category__title">314</span>
+            <span class="category__text">templates</span>
+          </div>
+          <div class="info-statistics__category">
+            <span class="category__title">12m+</span>
+            <span class="category__text">queries</span>
+          </div>
+        </div>
+      </div>
+      <div class="stats__image-container">
+        <img class="image__deskopt" src="/images/image-header-desktop.jpg" alt="Group of developers around the meeting table"/>
+        <img class="image__mobile" src="/images/image-header-mobile.jpg" alt="Group of developers around the meeting table"/>
+      
+      </div>
+    </div>
+  </div>
 
-  Get insights that help your business grow.
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
 
-  10k+ companies
-  314 templates
-  12m+ queries
+
+
+
+
+
 
   <div class="attribution-container">
-    Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev" target="_blank">Farrukhjon Dev</a>.
+    Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+      Mentor</a>.
+    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev"
+      target="_blank">Farrukhjon Dev</a>.
   </div>
 </body>
+
 </html>
