add h1 span class

--- a/src/main.html
+++ b/src/main.html
@@ -23,7 +23,7 @@
       <div class="stats__info">
         <div class="stats__info-text">
           <h1 class="info-text__title">
-            Get insights that help your business grow.
+            Get <span class="title__word">insights</span> that help your business grow.
           </h1>
           <p class="info-text__description">
             Discover the benefits of data analytics and make better decisions regarding
