refactor html class

--- a/src/main.html
+++ b/src/main.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="stats">
-      <div class="stats__info">
-        <div class="stats__info-text">
+  <section class="stats-preview-card">
+    <div class="wrapper">
+      <div class="card__info">
+        <div class="info-text">
           <h1 class="info-text__title">
             Get <span class="title__word">insights</span> that help your business grow.
           </h1>
@@ -30,41 +30,31 @@
             revenue, customer experience, and overall efficiency.
           </p>
         </div>
-        <div class="stats__info-statistics">
-          <div class="info-statistics__category">
-            <span class="category__title">10k+</span>
+        <div class="info-data">
+          <div class="info-data__category">
+            <span class="category__volume">10k+</span>
             <span class="category__text">companies</span>
           </div>
-          <div class="info-statistics__category">
-            <span class="category__title">314</span>
+          <div class="info-data__category">
+            <span class="category__volume">314</span>
             <span class="category__text">templates</span>
           </div>
-          <div class="info-statistics__category">
-            <span class="category__title">12m+</span>
+          <div class="info-data__category">
+            <span class="category__volume">12m+</span>
             <span class="category__text">queries</span>
           </div>
         </div>
       </div>
-      <div class="stats__image-container">
-        <img class="image__deskopt" src="/images/image-header-desktop.jpg" alt="Group of developers around the meeting table"/>
-        <img class="image__mobile" src="/images/image-header-mobile.jpg" alt="Group of developers around the meeting table"/>
-      
+      <div class="card__image">
+        <img class="image desktop-only" src="/images/image-header-desktop.jpg" alt="Group of developers around the meeting table"/>
+        <img class="image mobile-only" src="/images/image-header-mobile.jpg" alt="Group of developers around the meeting table"/>
       </div>
     </div>
-  </div>
-
-
-
-
-
-
-
-
-
-  <div class="attribution-container">
-    Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+  </section>
+  <div class="attribution">
+    Challenge by <a class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
       Mentor</a>.
-    Coded by <a class="attribution" href="https://www.frontendmentor.io/profile/Farrukhjondev"
+    Coded by <a class="attribution__link" href="https://www.frontendmentor.io/profile/Farrukhjondev"
       target="_blank">Farrukhjon Dev</a>.
   </div>
 </body>
