--- a/src/main.html
+++ b/src/main.html
@@ -19,7 +19,7 @@
 
 <body>
   <section class="stats-preview-card">
-    <div class="wrapper">
+    <div class="card">
       <div class="card__info">
         <div class="info-text">
           <h1 class="info-text__title">
@@ -51,12 +51,12 @@
       </div>
     </div>
   </section>
-  <div class="attribution">
+  <section class="attribution">
     Challenge by <a class="attribution__link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
       Mentor</a>.
     Coded by <a class="attribution__link" href="https://www.frontendmentor.io/profile/Farrukhjondev"
       target="_blank">Farrukhjon Dev</a>.
-  </div>
+  </section>
 </body>
 
 </html>
